--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+@import "ngx-toastr/toastr";
+
+@import "bootstrap/scss/bootstrap";
+@import "bootstrap-icons/font/bootstrap-icons";
+
+@import "styles/styles";
+
+html,
+body {
+  height: 100%;
+}
+
+// for debug
+// * {
+//   border: red 1px dotted !important;
+// }
